# soare-plus-plus

./: CMakeLists.txt  ceata.cpp  ceata.h  exceptii.cpp  exceptii.h  fenomen_meteorologic.cpp  fenomen_meteorologic.h  furtuna.cpp  furtuna.h  main.cpp  ploaie.cpp  ploaie.h  simulator.cpp  simulator.h  simulator_impl.cpp  soare.cpp  soare.h  statistica.cpp  statistica.h
